--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kanban Board</title>
+    <title>Kanban Board Pro</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
     <header>
-        <h1>Kanban Board</h1>
+        <h1>Kanban Board Pro</h1>
         <div class="controls">
             <select id="filter-priority">
                 <option value="all">All Priorities</option>
@@ -21,8 +21,10 @@
             <select id="sort-tasks">
                 <option value="priority">Sort by Priority</option>
                 <option value="dueDate">Sort by Due Date</option>
+                <option value="title">Sort by Title</option>
             </select>
             <button id="show-analytics">Show Analytics</button>
+            <button id="export-tasks">Export Tasks</button>
         </div>
     </header>
     <main id="kanban-board">
@@ -53,6 +55,7 @@
                 <option value="high">High</option>
             </select>
             <input type="date" id="task-due-date">
+            <input type="text" id="task-tags" placeholder="Tags (comma-separated)">
             <button id="save-task">Save Task</button>
             <button id="close-modal">Cancel</button>
         </div>
@@ -61,9 +64,11 @@
         <div class="modal-content">
             <h2>Analytics Dashboard</h2>
             <div id="analytics-content"></div>
+            <canvas id="task-chart"></canvas>
             <button id="close-analytics">Close</button>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
