Added comments and attachments to tasks

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 <option value="incomplete">Incomplete</option>
                 <option value="complete">Complete</option>
             </select>
+            <button id="show-archived">Show Archived Tasks</button>
         </div>
     </header>
     <main id="kanban-board">
