--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
                 <option value="complete">Complete</option>
             </select>
             <button id="show-archived">Show Archived Tasks</button>
+            <button id="create-column">Create New Column</button>
+            <button id="toggle-timer">Toggle Pomodoro Timer</button>
         </div>
     </header>
     <main id="kanban-board">
@@ -105,8 +107,23 @@
             <button id="close-analytics">Close</button>
         </div>
     </div>
+    <div id="column-modal" class="modal">
+        <div class="modal-content">
+            <h2>Create New Column</h2>
+            <input type="text" id="column-title" placeholder="Column Title" required>
+            <button id="save-column">Save Column</button>
+            <button id="close-column-modal">Cancel</button>
+        </div>
+    </div>
+    <div id="pomodoro-timer" class="hidden">
+        <div id="timer-display">25:00</div>
+        <button id="start-timer">Start</button>
+        <button id="pause-timer">Pause</button>
+        <button id="reset-timer">Reset</button>
+    </div>
     <input type="file" id="import-file" accept=".json" style="display: none;">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sortablejs/1.14.0/Sortable.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
